# vector_we_love

./: README.md
vector_control/: CMakeLists.txt  package.xml  readme.md
vector_control/config/: control.yaml
vector_control/launch/: control.launch  teleop.launch
vector_description/: CMakeLists.txt  changelog.md  package.xml  readme.md
vector_description/launch/: description.launch
vector_description/urdf/: vector.gazebo  vector.urdf.xacro
vector_description/urdf/common/: inertia.xacro
vector_description/urdf/components/: belt.urdf.xacro  camera.urdf.xacro  camera.xacro  drop_sensor.urdf.xacro  drop_sensor.xacro  imu.urdf.xacro  imu.xacro  skid_drive.xacro  wheel.urdf.xacro  wheel.xacro
vector_gazebo/: CMakeLists.txt  changelog.md  package.xml  readme.md
vector_gazebo/launch/: empty_world.launch  spawn_vector.launch
vector_viz/: CMakeLists.txt  changelog.md  package.xml  readme.md
vector_viz/launch/: view_model.launch
vector_viz/rviz/: model.rviz
