<?xml version="1.0"?>
<package format="2">
    <name>vector_control</name>
    <version>0.0.0</version>
    <description>The vector_control package</description>

    <maintainer email="angelos@codingAdventures.org">angelos plastropoulos</maintainer>
    <author>angelos plastropoulos</author>

    <license>MIT</license>

    <url type="website">http://codingAdventures.org</url>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>controller_manager</build_depend>
    <build_depend>interactive_marker_twist_server</build_depend>
    <build_depend>joint_state_controller</build_depend>
    <build_depend>teleop_twist_keyboard</build_depend>
    <build_export_depend>controller_manager</build_export_depend>
    <build_export_depend>interactive_marker_twist_server</build_export_depend>
    <build_export_depend>joint_state_controller</build_export_depend>
    <build_export_depend>teleop_twist_keyboard</build_export_depend>
    <exec_depend>controller_manager</exec_depend>
    <exec_depend>interactive_marker_twist_server</exec_depend>
    <exec_depend>joint_state_controller</exec_depend>
    <exec_depend>teleop_twist_keyboard</exec_depend>


</package>
