<?xml version="1.0"?>
<package format="2">
  <name>vector_description</name>
  <version>0.0.1</version>
  <description>The vector_description package</description>

  <maintainer email="angelos@codingAdventures">angelos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

</package>
